2014-12-31  Dirk Eddelbuettel  <edd@debian.org>

	* src/cnpyMod.cpp: Correct call to byte swap for big endian systems

2014-12-28  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Edited Title: and Description:; bumped Date: and Version:

	* tests/loadFiles.R: Print results; remove test for [known] int support
	* tests/loadFiles.Rout.save: Updated as well

2014-12-01  Romain Francois  <romain@r-enthusiasts.com>

	* src/cnpyMod.cpp: Use const_iterator

2014-08-05  Dirk Eddelbuettel  <edd@debian.org>

	* src/cnpyMod.cpp: Attempt to deal with big endian for int64 and double

2014-08-04  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/RcppCNPy-intro.Rnw: Do not assume 'system("gzip ...")'
	  works because, y'a know, there is Windoze...

2014-04-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.2.3
	* inst/NEWS.Rd: Updated with release news

2014-04-09  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/RcppCNPy-intro.Rnw:
	  - Updated vignette to reflect integer support on all
	    platforms thanks to 'long long'
	  - Switched to font used in Rcpp vignettes
	  - Switched to vignette processing via highlight

	* man/RcppCNPy-package.Rd: Updated to reflect integer support

	* src/Makevars.win: Updated as well

	* .travis.yml: Added _R_CHECK_FORCE_SUGGESTS_=FALSE to not
	  stumble over Suggests: highlight not being installed

2014-04-08  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars: Set 'CXX_STD = CXX11' which gets us 'long long'
	* DESCRIPTION: Add depends on R (>= 3.1.0)

	* src/cnpy.h: No longer test for RCPP_HAS_LONG_LONG_TYPES
        * src/cnpy.cpp: Idem
        * src/cnpyMod.cpp: Idem

2013-11-29  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.2.2

	* src/cnpy.cpp (BigEndianTest): Re-use the R compile-time
	configuration result to switch between little and big endian

	* tests/saveAndLoad.R: New test file for save and load cycle
	* tests/saveAndLoad.Rout.save: And result for comparison
