@@ -53,6 +53,16 @@ T swap_endian(T u) {
     return dest.u;
 }
 
+Rcpp::NumericVector swapDouble(Rcpp::NumericVector ret) {
+    std::transform(ret.begin(), ret.end(), ret.begin(), swap_endian<double>);
+    return ret;
+}
+
+Rcpp::IntegerVector swapInteger(Rcpp::IntegerVector ret) {
+    std::transform(ret.begin(), ret.end(), ret.begin(), swap_endian<int32_t>);
+    return ret;
+}
+
 // cf stackoverflow.com/questions/874134
 bool hasEnding(std::string const &full, std::string const &ending) {
     if (full.length() >= ending.length()) {
@@ -79,13 +89,13 @@ Rcpp::RObject npyLoad(const std::string & filename, const std::string & type, co
             double *p = reinterpret_cast<double*>(arr.data);
             ret = Rcpp::NumericVector(p, p + shape[0]);
 #ifdef WORDS_BIGENDIAN
-            std::transform(ret.begin(), ret.end(), ret.begin(), swap_endian<double>);
+            ret = swapDouble(ret);
 #endif
         } else if (type == "integer") {
             int64_t *p = reinterpret_cast<int64_t*>(arr.data);
             ret = Rcpp::IntegerVector(p, p + shape[0]);
 #ifdef WORDS_BIGENDIAN
-            std::transform(ret.begin(), ret.end(), ret.begin(), swap_endian<int64_t>);
+            ret = swapInteger(ret);
 #endif
         } else {
             arr.destruct();
@@ -100,7 +110,7 @@ Rcpp::RObject npyLoad(const std::string & filename, const std::string & type, co
                 ret = Rcpp::NumericMatrix(shape[0], shape[1], reinterpret_cast<double*>(arr.data));
             }
 #ifdef WORDS_BIGENDIAN
-            std::transform(ret.begin(), ret.end(), ret.begin(), swap_endian<double>);
+            ret = swapDouble(ret);
 #endif
         } else if (type == "integer") {
             // invert dimension for creation, and then tranpose to correct Fortran-vs-C storage
@@ -110,7 +120,7 @@ Rcpp::RObject npyLoad(const std::string & filename, const std::string & type, co
                 ret = transpose(Rcpp::IntegerMatrix(shape[0], shape[1], reinterpret_cast<int64_t*>(arr.data)));
             }
 #ifdef WORDS_BIGENDIAN
-            std::transform(ret.begin(), ret.end(), ret.begin(), swap_endian<int64_t>);
+            ret = swapInteger(ret);
 #endif
         } else {
             arr.destruct();
